load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@org_pubref_rules_protobuf//go:rules.bzl", "GRPC_COMPILE_DEPS")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
        "controller.go",
        "cron.go",
        "server.go",
    ],
    importpath = "github.com/raggledodo/graphmgr/server",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/mingkaic/go_tenncor/graphmgr:go_default_library",
        "//vendor/github.com/mingkaic/go_tenncor/serial:go_default_library",
        "//vendor/github.com/robfig/cron:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ] + GRPC_COMPILE_DEPS,
)

go_binary(
    name = "server",
    data = ["//:tfgen"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
